packages/components/navigation/src/navigation.scss
// Navigation
// Navigation component that supports 3 levels of links.
//
// See http://warpspire.com/kss/ for documentation guidelines.
// Version 0.0.1

@mixin navigation() {
    $root: &;

    box-sizing: border-box;
    font-size: 1rem;

    &__list {
        position: relative;
        display: flex;
        flex-wrap: nowrap;
        list-style: none;
        padding: 0;
    }

    &__item {
        font-size: 1.4em;
        margin: 0;
    }

    &__link {
        display: block;
        color: #484747;
        font-weight: 700;
        text-transform: uppercase;
        padding: 1.286em 0;

        &:hover,
        &:visited {
            color: inherit;
        }

        &--category {
            color: inherit;
            font-size: .9em;
            padding: 5px 0;
            margin: 0;
            border-bottom: 1px solid #e9e9e9;
        }

        &--subcategory {
            text-transform: none;
            font-weight: 500;
            padding: 2px 0;
        }
    }

    &__flyout {
        position: absolute;
        display: none;
        background: #fff;
        box-shadow: 8px 8px 0 0 rgba( 0, 0, 0, .2 );
        left: 0;
        z-index: 3;

        &--visible {
            display: flex;
        }
    }

    &__categories {
        column-width: calc( 25vw - 30px / 4 );
        column-count: 3;
        column-gap: 0;

        @include media( '>=1200px' ) {
            column-count: 4;
            column-width: 240px; // 1200px / 5
        }
    }

    &__category,
    &__banners {
        box-sizing: border-box;
        padding: 10px;
        width: calc( 25vw - 30px / 4 );

        @include media( '>=1200px' ) {
            width: 240px; // 1200px / 5
        }
    }

    &__category {
        // Prevents element breaking because of column layout.
        page-break-inside: avoid;           /* Theoretically FF 20+ */
        break-inside: avoid-column;         /* IE 11 */
        display: table;
    }


    &__subcategories {
        list-style: none;
        padding: 0;
        margin: 0;
    }

    &__subcategory {
        margin-bottom: 0 !important;
    }

    &__banners {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
    }

    &__banner {
        & + & {
            padding-top: 10px;
        }
    }
}

